Institute name duplication error was caught and brought to front

--- a/src/main/resources/templates/institute/addInstitute.html
+++ b/src/main/resources/templates/institute/addInstitute.html
@@ -134,7 +134,7 @@
                     </button >
                 </div >
                 <!--Error-->
-                <div class="form-row">
+                <div class="form-row text-danger font-weight-bolder">
                     <label data-th-if="${#fields.hasErrors('*')}" data-th-text="'Errors: '"
                            id="errorLabel">Errors: </label>
                     <ul>
